--- a/styles.css
+++ b/styles.css
@@ -31,14 +31,14 @@ h4 {
     text-align: center
 }
 
-.top img {
+header img {
     max-width: 95%;
     border-radius: 24px;
     display: block;
     margin-left: auto;
     margin-right: auto
 }
-.top p {
+header p {
     font-family: 'Open Sans', sans-serif;
     font-size: 22px;
     
@@ -123,10 +123,48 @@ footer p {
 
 @media only screen and (min-width: 2000px) {
 
-    .top img {
+    header img {
         max-width: 1900px;
         display:block;
         margin:auto;
         padding-top: 5px;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+
+    h1 {
+        font-size: 35px;
+        padding: 50px 0px 20px 30px;
+    }
+    h2 {
+        font-size: 35px;
+        padding: 30px 0px 20px 30px;
+    }
+
+    header p {
+        font-size: 18px;
+        padding: 0px 0px 0px 37px;
+    }
+    
+    .dalle-card {
+        padding: 0;
+        display: block; 
+        margin: 0 auto 50px 30px;
+    }
+    .calculator-card {
+        padding: 0;
+        display: block; 
+        margin: 0 auto 50px 30px;
+    }
+    .cards img {
+        width: 100%;
+        border-radius: 20px;
+        transition: 300ms;
+    }
+    .svg {
+        width: 150%;
+        padding: 0;
+        margin: 0;
     }
 }
