--- a/styles.css
+++ b/styles.css
@@ -140,8 +140,15 @@ footer p {
     h2 {
         font-size: 35px;
         padding: 30px 0px 20px 30px;
+    } 
+    header img {
+        max-width: 600px;
+        display: block; 
+        margin: 0 auto;
+        padding: 0px 10px 0px 5px;
+        box-sizing:border-box;
+        border-radius: 40px;
     }
-
     header p {
         font-size: 18px;
         padding: 0px 0px 0px 37px;
@@ -163,7 +170,7 @@ footer p {
         transition: 300ms;
     }
     .svg {
-        width: 150%;
+        width: 100%;
         padding: 0;
         margin: 0;
     }
